# counter-offer-coach

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: USGS_Ammonia_Price_Pull  ci.yml  edgar-pull.yml  eia-monthly.yml  usgs-ammonia-pull.yml  usitc-monthly.yml
.omc/: project-memory.json
.omc/sessions/: 55164360-f10f-4287-92bb-823988ba0436.json  65d9c7b6-0ba5-472d-bd1d-0d102e1bbe5a.json
config/: aniline.yaml  chemical_registry.yaml  hydrogen_cn.yaml  margin_anchors.yaml  producer_sources.yaml
counter-offer-coach/: .gitignore
dashboard/: app.py
data/: aniline_daily_prices.csv  china_electricity_tariffs.csv  fair_price_check_fixture_2025-01_US.json  h2_cn_sensitivity.csv  price_observations.csv
demo reference/: README.md  aniline_montecarlo_demo.py
docs/: CHINA_TRACK.md  HYDROGEN_CN.md
engine/: feedstock.py  markup.py  predict.py  prices.py  routes.py  utilities.py
pipeline/: comtrade.py  edgar_financials.py  eia.py  export_country_csv.py  fx.py  init_db.py  margin_anchors.py  pubchem.py  sec_edgar.py  storage.py  sunsirs.py  usgs_minerals.py  usitc.py  usitc_history.py
tests/: conftest.py  test_china_track.py  test_comtrade.py  test_config_integrity.py  test_edgar_financials.py  test_feedstock.py  test_feedstock_resolver_extra.py  test_hydrogen_cn.py  test_init_db.py  test_markup.py  test_predict.py  test_prices_nitric_acid.py  test_routes.py  test_sec_edgar.py  test_smoke.py  test_storage.py  test_ugis_minerals  test_usgs_minerals.py  test_usitc.py  test_usitc_history.py  test_utilities.py
(+9 files in other folders)
