[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "counter-offer-coach"
version = "0.1.0"
description = "Should-cost and Bayesian calibration engine for specialty chemicals procurement"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "requests",
    "pyyaml",
    "numpy",
    "streamlit",
    "pdfplumber",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "pre-commit", "jsonschema"]

# This repo is a collection of scripts, not an importable library, so there are no
# packages to build. This disables setuptools auto-discovery (which otherwise errors
# on the multiple top-level folders) while still installing the dependencies above.
[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
